# http_server

./: CMakeLists.txt  README.md  server.conf
docs/: architecture.md  chat_context.md  design_decisions.md  diary.md  notes.md  roadmap.md
include/config/: ServerConfig.hpp
include/filesystem/: FileReader.hpp  MimeTypes.hpp  StaticFileHandler.hpp
include/http/: Parser.hpp  Request.hpp  Response.hpp
include/logger/: Logger.hpp
include/router/: Router.hpp
include/server/: Connection.hpp  Middleware.hpp  Server.hpp
public/: about.html  index.html  style.css
public/errors/: 403.html  404.html  500.html
src/: main.cpp
src/common/: Logger.cpp
src/config/: ServerConfig.cpp
src/filesystem/: FileReader.cpp  MimeTypes.cpp  StaticFileHandler.cpp
src/http/: Parser.cpp  Response.cpp
src/logger/: Logger.cpp
src/router/: Router.cpp
src/server/: Connection.cpp  Middleware.cpp  Server.cpp
